# pcf-rs

./: .gitignore  README.md  docker-compose.yaml  justfile  pcf-api-extracted
api/: .dockerignore  Cargo.toml  README.2.md  README.3.md  README.4.md  README.md  cleanup-completion-report.md  dependencies.toml  distributed_tracing_test.md  docker-compose.yaml  justfile  test_server.sh
api/.claude/: CLAUDE.local.md  SPEC.md  TODO.md
api/.claude/.meta/: ESCAPE_HATCHES_ANALYSIS.md
api/.claude/.plan/: SPEC_CHANGES.md
api/.claude/.plan/mdbook/: PHASE_UPDATES_SUMMARY.md  PHASE_UPDATE_PLAN.md  PLAN.md  README.md  phase-1-foundation.md  phase-2-core-content.md  phase-3-interactive-features.md  phase-4-quality-assurance.md  phase-5-deployment.md
api/.claude/.plan/phase-1/: WORK_PLAN.md
api/.claude/.plan/phase-2/: REVIEW_PLAN.md  WORK_PLAN.md
api/.claude/.plan/phase-3/: REVIEW_PLAN.md  WORK_PLAN.md
api/.claude/.plan/phase-4/: REVIEW_PLAN.md  WORK_PLAN.md
api/.claude/.plan/phase-5/: REVIEW_PLAN.md  WORK_PLAN.md
api/.claude/.plan/phase-6/: REVIEW_PLAN.md  WORK_PLAN.md
api/.claude/.plan/phase-7/: GAP_REMEDIATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  PLAN_ANALYSIS.md  REVIEW_PLAN.md  WORK_PLAN.md  apply-critical-fixes.sh  rigid-language-analysis.md  (+1 more)
api/.claude/.reviews/: checkpoint-1-feedback.md  checkpoint-1-review-final.md  checkpoint-1-review-v2.md  checkpoint-3-feedback.md  checkpoint-4-review.md  cleanup-plan.md  mdbook-phase1-implementation-review.md  mdbook-phase2-complete-review.md  mdbook-phase2-implementation-review.md  mdbook-phase3-interactive-features-review.md  phase-2-escape-hatches-analysis.md  phase-4-checkpoint-1-feedback.md  phase-4-checkpoint-1-questions.md  phase-4-checkpoint-1-review.md  phase-4-checkpoint-1-v2-feedback.md  phase-4-checkpoint-1-v2-review.md  phase-4-checkpoint-2-feedback.md  phase-4-checkpoint-2-review.md  phase-4-checkpoint-3-feedback.md  phase-4-checkpoint-3-review.md  phase-4-checkpoint-4-feedback.md  phase-4-checkpoint-4-questions.md  phase-4-checkpoint-4-review.md  phase-4-checkpoint-5-questions.md  phase-5-checkpoint-1-feedback.md  phase-5-checkpoint-1-questions.md  phase-5-checkpoint-1-review.md  phase-5-checkpoint-2-feedback.md  phase-5-checkpoint-2-questions.md  phase-5-checkpoint-2-review.md  phase-5-checkpoint-2-status-report.md  phase-5-checkpoint-3-feedback.md  phase-5-checkpoint-3-questions.md  phase-5-checkpoint-3-review.md  phase-5-checkpoint-4-questions.md  phase-5-progress-report.md  phase2-checkpoint-1-feedback-v2.md  phase2-checkpoint-1-questions.md  phase2-checkpoint-1-review-v2.md  phase2-checkpoint-1-review.md  (+14 more)
api/.claude/.spec/: README.md  mdbook-documentation.md  metrics.md
api/.claude/docs/: old-files-integration-tracker.md  path-migration.md  structure-guide.md
api/.claude/junior-dev-helper/: authorization-common-errors.md  connection-pool-guide.md  container-debugging-guide.md  container-security-guide.md  database-tdd-examples.md  dataloader-guide.md  dataloader-n1-tutorial.md  docker-best-practices.md  graphql-tdd-examples.md  kubernetes-deployment-guide.md  observability-common-errors.md  opentelemetry-tracing-guide.md  performance-optimization-errors.md  performance-optimization-index.md  performance-testing-tutorial.md  phase-6-integration-guide.md  response-caching-guide.md  secret-management-tutorial.md  spicedb-setup-guide.md  surrealdb-guide.md  testcontainers-guide.md  timeout-management-guide.md  verify-phase-6-template.sh  websocket-subscriptions-guide.md
api/.github/workflows/: mdbook.yml
api/benches/: authorization.rs
api/config/: default.toml  development.toml
api/docs/: IMPLEMENTATION_COMPLETE.md  MIGRATION_SUMMARY.md  PHASE_3_COMPLETE.md  PLUGIN_STATUS.md  UPDATE_PHASE_PLANS.md  book.toml
api/docs/src/: 404.md  README.md  SUMMARY.md
api/docs/theme/: custom.css  custom.js
api/scripts/: README.md  verify-auth.sh  verify-phase-3.sh  verify_authorization.py
api/src/: lib.rs  main.rs
api/src/.archive/: auth.rs  config.rs  main.rs  webhooks.rs
api/src/auth/: audit.rs  cache.rs  components.rs  fallback.rs  mod.rs  permissions.rs
api/src/benchmarks/: authorization.rs  mod.rs
api/src/config/: demo.rs  mod.rs  models.rs  validation.rs
api/src/error/: mod.rs  types.rs
api/src/graphql/: context.rs  dataloaders.rs  errors.rs  handlers.rs  integration_test.rs  metrics.rs  mod.rs  mutation.rs  pagination.rs  query.rs  security.rs  subscription.rs
api/src/health/: handlers.rs  mod.rs  state.rs
api/src/helpers/: authorization.rs  mod.rs
api/src/logging/: mod.rs  sanitization.rs  subscriber.rs  tracing.rs
api/src/middleware/: circuit_breaker.rs  mod.rs  tracing.rs
api/src/observability/: endpoint.rs  init.rs  integration_tests.rs  logging.rs  metrics.rs  mod.rs  recorder.rs  tracing.rs
api/src/schema/: TODO.md  note.rs
api/src/server/: mod.rs  runtime.rs  shutdown.rs
api/src/services/: mod.rs
api/src/tests/: authorization_integration.rs  mod.rs
api/tests/: server_integration.rs
(+295 files in other folders)
