[package]
name = "pcf-api"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pcf-api"
path = "src/main.rs"

[dependencies]
# Core server
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Configuration
figment = { version = "0.10", features = ["toml", "env"] }
garde = { version = "0.22.0", features = ["derive", "regex"] }
clap = { version = "4.0", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"

# Database and async traits
async-trait = "0.1"
serde_json = "1.0"
semver = { version = "1.0", features = ["serde"] }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }

[features]
demo = []
