[package]
name = "pcf-api"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pcf-api"
path = "src/main.rs"

[dependencies]
# Core server
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1.0", features = ["full", "sync"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Configuration
figment = { version = "0.10", features = ["toml", "env"] }
garde = { version = "0.22.0", features = ["derive", "regex"] }
clap = { version = "4.0", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# OpenTelemetry distributed tracing
opentelemetry = "0.23"
opentelemetry_sdk = { version = "0.23", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.16", features = ["tonic"] }
tracing-opentelemetry = "0.24"

# Metrics
metrics = "0.23"
metrics-exporter-prometheus = { version = "0.15", features = ["http-listener"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"

# Database and async traits
async-trait = "0.1"
serde_json = "1.0"
semver = { version = "1.0", features = ["serde"] }
lazy_static = "1.4"

# Connection management and retry logic
futures = "0.3"
rand = "0.8"

# Data models and validation (for Checkpoint 3)
surrealdb = { version = "2.1", features = ["kv-mem"] }
ulid = "1.1"

# Write queue persistence (for Checkpoint 4)
bincode = "1.3"

# GraphQL dependencies (for Phase 3)
async-graphql = { version = "7.0", features = ["chrono", "uuid", "log", "dataloader"] }
async-graphql-axum = "7.0"
async-stream = "0.3"
base64 = "0.22"

# Optional dependencies for benchmarks
criterion = { version = "0.5", features = ["html_reports"], optional = true }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tempfile = "3.0"
tracing-test = "0.2"
tokio-test = "0.4"

[features]
demo = []
benchmarks = ["dep:criterion"]
metrics-basic = []
metrics-detailed = ["metrics-basic"]
metrics-all = ["metrics-detailed"]

[[bench]]
name = "authorization"
harness = false
required-features = ["benchmarks"]
